# cudatest1

./: CMakeLists.txt  LICENSE.txt  README.md  configure  main.c  vector_test.cu
